# aether-one

./: .gitignore  FULL_README.md  L5_INTEGRATION_GUIDE.md  NETWORK_SETUP.md  PROJECT_STATUS_AND_DIRECTION.md  QUICKSTART.md  README.md  ROADMAP.md
.github/workflows/: dilithium-heavy-integration.yml  verify.yml
concept/: README.md
concept/aether-os/: README.md
concept/decision-matrix/: DECISION_MATRIX_GUIDE.md  README.md  action_simulator.py  decision_matrix_full.py  recommendation_engine.py
concept/hardware-device/: README.md
concept/karaokekoppi/: README.md
concept/kuopio-core/: README.md
concept/lex-resiliens/: README.md
concept/lex-resiliens/framework/: LICENSE  README.md  lr_open.py  lr_open_core.json  pyproject.toml
concept/lex-resiliens/framework/docs/: API_REFERENCE.md  METHODOLOGY.md
concept/lex-resiliens/framework/examples/: scenarios.json
concept/lex-resiliens/framework/generic_bridge/: golden_runner.py  test_generic_bridge.py  trustlog.py
concept/lex-resiliens/framework/wem_bridge/: test_wem_to_lr.py  wem_to_lr.py
concept/tri-core/: README.md
concept/trustcore-nx/: README.md
decision-frameworks/ogas2-fiscal/: l6_decision_matrix_v1_1.json
decision-frameworks/resilienssi-indikaattori/: Resilienssi-indikaattori_tekninen_liite.md  Resilienssi-indikaattori_tiivistelma.md  (+2 more)
docs/: Aether_One_Integration_Plan_v1.0.docx
pi2_trust_server/: README.md  install.sh  requirements.txt  start.sh
pi5_edge_node/: README.md  install.sh  requirements.txt  setup_swtpm.sh  start.sh  test_client_e2e.py  test_enroll_live.py
(+754 files in other folders)
