[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lr-open"
version = "1.0.0"
description = "Lex Resiliens Open Framework – Kuopio 2025 Edition"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Marko Ruotsalainen" }
]
license = { text = "MIT" }
keywords = ["resilience", "governance", "lex-resiliens", "systems"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
dependencies = []

[project.urls]
Homepage = "https://example.com/lr-open-framework"
Source   = "https://example.com/lr-open-framework"
Issues   = "https://example.com/lr-open-framework/issues"

[project.scripts]
lr-open = "lr_open:main"
